--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 
 	<properties>
 		<jackson-version>2.14.2</jackson-version>
+		<maven.compiler.source>11</maven.compiler.source>
+  		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencies>
